--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -46,6 +47,7 @@
     "eslint-config-next": "15.2.4",
     "eslint-plugin-storybook": "^0.12.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lightningcss": "^1.29.3",
     "playwright": "^1.51.1",
     "postcss": "^8.5.3",
