--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
