--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lightningcss": "^1.29.3",
     "playwright": "^1.51.1",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "storybook": "^8.6.12",
     "tailwindcss": "^4.1.3",
     "ts-node": "^10.9.2",
