--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -106,6 +106,8 @@ jobs:
 
       - name: Build app
         run: npm run build
+        env:
+          NEXT_EXPORT: true
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
